<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonpower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="7dp"
        android:text="@string/power_stone" />

    <Button
        android:id="@+id/buttonspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="3dp"
        android:text="@string/space_stone" />

    <Button
        android:id="@+id/buttonreality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp"
        android:text="@string/reality_stone" />

    <Button
        android:id="@+id/buttontime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginStart="2dp"
        android:text="@string/time_stone" />



    <Button
        android:id="@+id/buttonsoul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/soul_stone" />


    <Button
        android:id="@+id/buttonmind"
        android:layout_width="119dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp"
        android:text="@string/mind_stone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="43dp"

        android:text="@string/hello_thanos" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="281dp"

        android:layout_height="61dp"
        android:layout_marginBottom="37dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:text="@string/reset" />


</LinearLayout>
